--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,43 +1,43 @@
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-              {{ with .Site.Params.social.twitter }}
-              <li><a href="https://twitter.com/{{ . }}" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-              {{ end }}
-              {{ with .Site.Params.social.mastodon }}
-              <li><a href="https://mastodon.social/{{ . }}" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a></li>
-              {{ end }}
-              {{ with .Site.Params.social.github }}
-              <li><a href="https://github.com/{{ . }}" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-              {{ end }}
-              {{ with .Site.Params.social.facebook }}
-              <li><a href="https://facebook.com/{{ . }}" class="icon brands fa-facebook"><span class="label">Facebook</span></a></li>
-              {{ end }}
-              {{ with .Site.Params.social.youtube }}
-              <li><a href="https://youtube.com/{{ . }}" class="icon brands fa-youtube"><span class="label">GitHub</span></a></li>
-              {{ end }}
-              {{ with .Site.Params.social.instagram }}
-              <li><a href="https://instagram.com/{{ . }}" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-              {{ end }}
-              {{ with .Site.Params.social.dribble }}
-              <li><a href="https://dribble.com/{{ . }}" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-              {{ end }}
-              {{ with .Site.Params.contact.email }}
-              <li><a href="mailto:{{ . }}" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-              {{ end }}
-              {{ with .Site.Params.contact.phone }}
-              <li><a href="tel:{{ . }}" class="icon solid fa-phone"><span class="label">Phone</span></a></li>
-              {{ end }}
+<!-- Footer -->
+<footer id="footer">
+  <ul class="icons">
+    {{ with .Site.Params.social.twitter }}
+    <li><a href="https://twitter.com/{{ . }}" class="icon"><i class="fa-brands fa-twitter"></i></a></li>
+    {{ end }}
+    {{ with .Site.Params.social.mastodon }}
+    <li><a href="https://mastodon.social/{{ . }}" class="icon"><i class="fa-brands fa-mastodon"></i></a></li>
+    {{ end }}
+    {{ with .Site.Params.social.github }}
+    <li><a href="https://github.com/{{ . }}" class="icon"><i class="fa-brands fa-github"></i></a></li>
+    {{ end }}
+    {{ with .Site.Params.social.facebook }}
+    <li><a href="https://facebook.com/{{ . }}" class="icon"><i class="fa-brands fa-facebook"></i></a></li>
+    {{ end }}
+    {{ with .Site.Params.social.youtube }}
+    <li><a href="https://youtube.com/{{ . }}" class="icon"><i class="fa-brands fa-youtube"></i></a></li>
+    {{ end }}
+    {{ with .Site.Params.social.instagram }}
+    <li><a href="https://instagram.com/{{ . }}" class="icon"><i class="fa-brands fa-instagram"></i></a></li>
+    {{ end }}
+    {{ with .Site.Params.social.dribble }}
+    <li><a href="https://dribble.com/{{ . }}" class="icon"><i class="fa-brands fa-dribbble"></i></a></li>
+    {{ end }}
+    {{ with .Site.Params.contact.email }}
+    <li><a href="mailto:{{ . }}" class="icon"><i class="fa-solid fa-envelope"></i></a></li>
+    {{ end }}
+    {{ with .Site.Params.contact.phone }}
+    <li><a href="tel:{{ . }}" class="icon"><i class="fa-solid fa-phone"></i></a></li>
+    {{ end }}
 
-						</ul>
-						<ul class="copyright">
-              <li>&copy; {{ now.Year }} {{.Site.Params.copyright | safeHTML }}</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
+  </ul>
+  <ul class="copyright">
+    <li>&copy; {{ now.Year }} {{.Site.Params.copyright | safeHTML }}</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+  </ul>
+</footer>
 
-			</div>
+</div>
 
-      {{ partial "scripts.html" . }}
+{{ partial "scripts.html" . }}
 
-	</body>
+</body>
 </html>
