layouts: Add discord to footer
Add discord to the list of available social network in the template,
which show in the partial footer.

This reverts commit 2c874fe61846f61636d983a93f235f5b3ceba782.

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,6 +7,9 @@
     {{ with .Site.Params.social.mastodon }}
     <li><a href="https://mastodon.social/{{ . }}" class="icon"><i class="fa-brands fa-mastodon"></i></a></li>
     {{ end }}
+    {{ with .Site.Params.social.discord }}
+    <li><a href="https://discord.gg/{{ . }}" class="icon"><i class="fa-brands fa-discord"></i></a></li>
+    {{ end }}
     {{ with .Site.Params.social.github }}
     <li><a href="https://github.com/{{ . }}" class="icon"><i class="fa-brands fa-github"></i></a></li>
     {{ end }}
