--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,8 +1,8 @@
 <!-- Footer -->
 <footer id="footer">
   <ul class="icons">
-    {{ with .Site.Params.social.twitter }}
-    <li><a href="https://twitter.com/{{ . }}" class="icon"><i class="fa-brands fa-twitter"></i></a></li>
+    {{ with .Site.Params.social.x }}
+    <li><a href="https://x.com/{{ . }}" class="icon"><i class="fa-brands fa-x-twitter"></i></a></li>
     {{ end }}
     {{ with .Site.Params.social.mastodon }}
     <li><a href="https://mastodon.social/{{ . }}" class="icon"><i class="fa-brands fa-mastodon"></i></a></li>
